fix (container class spacing)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -24,6 +24,7 @@ main {
   max-width: 100ch;
   margin: 3rem auto;
   padding: 1rem;
+  gap: 2rem;
 }
 
 figcaption {
